planify/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");

body {
  font-family: "Work Sans", sans-serif;
}

@layer base {
  body {
    @apply m-0 font-sans antialiased;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
      sans-serif;
  }

  code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
  }
}


/* Styling for navbar */
.pink-purple-gradient_text {
  @apply bg-gradient-to-r from-[#f375a5] to-[#e94ab1] bg-clip-text text-transparent;
}

/* Styling for Tasks */
.head-text {
  @apply sm:text-4xl text-3xl font-semibold sm:leading-snug font-poppins;
}

.font-poppins {
  font-family: Poppins, sans-serif;
}

.pink-gradient-text {
  @apply bg-gradient-to-r from-[#9294ff] to-[#ca50ff] bg-clip-text text-transparent;
}

.subhead-text {
  @apply font-semibold sm:text-3xl text-xl relative font-poppins;
}

.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
}

.content {
  position: relative;
  background: white;
  padding: 20px;
  border-radius: 8px;
  z-index: 10;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

